home page complate

--- a/Bootstrap-task/index.html
+++ b/Bootstrap-task/index.html
@@ -528,10 +528,23 @@
         </div>
     </main>
     <!-- footer section -->
-    <footer class=" text-bg-dark p-5">
-        <div class="d-flex flex-column flex-md-row gap-5 justify-content-center container">
+    <footer class=" text-bg-dark p-5 position-relative">
+        <!-- contact us section -->
+         <div class="contact-section container d-flex flex-column flex-md-row rounded-5 justify-content-center shadow-lg">
+            <div class="first-contact d-flex gap-3 align-items-center justify-content-center flex-column flex-md-row">
+                <i class="fa-solid fa-envelope royal-blue-bg text-light p-3 rounded-5"></i>
+                <p class="m-0">Info@youremail.com</p>
+                <div class="vr"></div>
+            </div>
+          
+            <div class="second-contact d-flex gap-3 align-items-center justify-content-center flex-column flex-md-row">
+                <i class="fa-solid fa-phone royal-blue-bg text-light p-3 rounded-5"></i>
+                <p class="m-0">(480) 555-0103</p>
+            </div>
+         </div>
+        <div class="d-flex flex-column flex-md-row gap-5 justify-content-center container mb-5 mt-5">
 
-            <div class="d-flex flex-column gap-3 logo-part">
+            <div class="d-flex flex-column gap-3 logo-part mt-5">
                 <div class="text-uppercase h1">Logo</div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae. Est
                     tellus vitae, nullam lobortis enim.</p>
@@ -546,7 +559,7 @@
                 </div>
             </div>
         
-        <div class="quick-link">
+        <div class="quick-link mt-5">
               <ul class="nav flex-column">
                 <li class="nav-item h4">
                     <a class="nav-link text-light text-uppercase" href="#">quick link</a>
@@ -565,7 +578,7 @@
                 </li>
             </ul>
         </div>
-        <div class="email-section">
+        <div class="email-section mt-5">
             <div class="d-flex flex-column gap-2">
                 <div class="d-flex flex-column gap-3">
                     <div class="text-uppercase h4">news letter</div>
@@ -579,7 +592,10 @@
             </div>
         </div>
         </div>
-        <hr class="border-3">
+        <hr class="border-3 mt-5">
+        <div class="container d-flex flex-wrap gap-4 align-items-center justify-content-center">
+            <i class="fa-regular fa-copyright"></i><p class="m-0">Copyright 2021 .Ojjomedia. All Right Reserved.</p>
+        </div>
     </footer>
 
 
