--- a/Bootstrap-task/index.html
+++ b/Bootstrap-task/index.html
@@ -76,7 +76,7 @@
                                 aria-current="page" href="#">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fw-bold fs-5" href="#about">ABOUT</a>
+                            <a class="nav-link fw-bold fs-5" href="index.html#about">ABOUT</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link fw-bold fs-5" href="#feature">FEATURES</a>
@@ -84,7 +84,7 @@
                     </ul>
                 </div>
                 <div class="logo position-absolute">
-                    <img src="./img/Logo.png" alt="logo">
+                    <img src="./img/Logo4 1.png" alt="logo">
                 </div>
                 <div class="collapse navbar-collapse justify-content-around ms-5" id="mynavbar">
                     <ul class="navbar-nav gap-4 ms-5">
@@ -92,7 +92,7 @@
                             <a class="nav-link fw-bold fs-5" href="#screenshot">SCREENSHOT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fw-bold fs-5" href="#">BLOG</a>
+                            <a class="nav-link fw-bold fs-5" href="./blog.html">BLOG</a>
                         </li>
                     </ul>
                 </div>
