--- a/Bootstrap-task/blog.html
+++ b/Bootstrap-task/blog.html
@@ -174,8 +174,8 @@
             </div>
             <div class="col-md-5 col-12">
                 <div class="search">
-                    <i class="fa-solid fa-magnifying-glass opacity-50 p-2 py-3"></i>
-                    <input type="search" name="search" id="search" class="border-0 p-2" placeholder="search for..">
+                    <i class="fa-solid fa-magnifying-glass opacity-50 p-2"></i>
+                    <input type="search" name="search" id="search" class="border-0" placeholder="search for..">
                 </div>
                 <hr class="opacity-100 border-dark border-1 my-4">
                 <h4 class="text-uppercase fw-bold">Recent Post</h4>
