--- a/Bootstrap-task/index.html
+++ b/Bootstrap-task/index.html
@@ -32,10 +32,10 @@
                 </div>
             </div>
             <div class="icons d-flex align-items-center justify-content-center gap-3 flex-column flex-sm-row">
-                <i class="fa-brands fa-facebook text-light"></i>
-                <i class="fa-brands fa-instagram text-light"></i>
-                <i class="fa-brands fa-twitter text-light"></i>
-                <i class="fa-brands fa-youtube text-light"></i>
+                <i class="fa-brands fa-facebook text-light icon-hover"></i>
+                <i class="fa-brands fa-instagram text-light icon-hover"></i>
+                <i class="fa-brands fa-twitter text-light icon-hover"></i>
+                <i class="fa-brands fa-youtube text-light icon-hover"></i>
             </div>
         </div>
         <div class="offcanvas offcanvas-start" id="offcanvas" aria-labelledby="offcanvasLabel">
@@ -72,7 +72,7 @@
                 <div class="collapse navbar-collapse" id="mynavbar">
                     <ul class="navbar-nav gap-4 ms-3">
                         <li class="nav-item">
-                            <a class="nav-link active fw-bold fs-5 text-decoration-underline royal-blue"
+                            <a class="nav-link fw-bold fs-5"
                                 aria-current="page" href="#">HOME</a>
                         </li>
                         <li class="nav-item">
@@ -494,7 +494,7 @@
             <!-- blog cards -->
             <div
                 class="blog-card-section d-flex flex-md-row flex-column container gap-4 justify-content-center align-items-center p-3">
-                <div class="card">
+                <div class="card shadow">
                     <img src="./img/phone img/Image.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title mb-3 text-uppercase">The Snap Pixel: How It Works and How to Install Now
@@ -504,7 +504,7 @@
                         <a href="#" class="text-uppercase">read more</a>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card shadow">
                     <img src="./img/phone img/Image (1).png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title mb-3 text-uppercase">Global Partner Solutions: A Partnership of Innovation
@@ -514,7 +514,7 @@
                         <a href="#" class="text-uppercase">read more</a>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card shadow">
                     <img src="./img/phone img/Image (2).png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title mb-3 text-uppercase">2021: An opportunity for Snapchatters to start fresh
