java variable let, var, const

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -50,6 +50,13 @@
       color: black;
       box-shadow: 0 0 8px white;
     }
+    .flex {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+    }
     @media screen and (max-width:479px) {
       .flex {
         display: flex;
@@ -141,3 +148,4 @@
   </div>
 </body>
 </html>
+
