--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
           color: black;
           box-shadow: 0 0 8px white;
         }
+        .flex {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          align-items: center;
+          gap: 20px;
+        }
         @media screen and (max-width:479px) {
         
           .flex{
@@ -103,6 +110,11 @@
      <div class="flex">
      <a href="./Bootstrap/index.html" class="btn">Bootstrap all work</a>
      <a href="./Bootstrap-task/index.html" class="btn">Bootstrap task (6-7-2024)</a>
+     </div>
+     <hr>
+     <h2>JavaScript All Work</h2>
+     <div class="flex">
+     <a href="./Java script/index.html" class="btn">Js all work</a>
      </div>
      <hr>
     </div>
