update a index.html on js

--- a/Java script/index.html
+++ b/Java script/index.html
@@ -79,6 +79,11 @@
       <a href="./variable.html" class="btn">Variables</a>
     </div>
     <hr>
+    <h2>JavaScript Operator (22-7-2024)</h2>
+    <div class="flex">
+      <a href="./js_operator.html" class="btn">Operator</a>
+    </div>
+    <hr>
   
   
   </div>
