string method in js

--- a/Java script/index.html
+++ b/Java script/index.html
@@ -84,7 +84,11 @@
       <a href="./js_operator.html" class="btn">Operator</a>
     </div>
     <hr>
-  
+    <h2>JavaScript String (25-7-2024)</h2>
+    <div class="flex">
+      <a href="./string.html" class="btn">String</a>
+    </div>
+    <hr>
   
   </div>
 </body>
