--- a/Java script/index.html
+++ b/Java script/index.html
@@ -89,7 +89,11 @@
       <a href="./string.html" class="btn">String</a>
     </div>
     <hr>
-  
+    <h2>JavaScript Array (27-7-2024)</h2>
+    <div class="flex">
+      <a href="./array.html" class="btn">Array</a>
+    </div>
+    <hr>
   </div>
 </body>
 </html>
