--- a/task.html
+++ b/task.html
@@ -6,11 +6,12 @@
     <title>Editable Content</title>
  </head>
 <body>
-  <style contenteditable style="display: block; white-space:pre;">
+  <style contenteditable style="display: block; padding:30px">
     body{
         background-color: white;
         color: black;
         font-size: 20px;
+        font-weight: 400;
     }
   </style>
 </body>
