learn setInterval, setTimeout, call, bind, apply method and classes in js

--- a/Java script/strict_mode.html
+++ b/Java script/strict_mode.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Strict Mode in Js</title>
+    <style>
+      .grid-container{
+        display: grid;
+        grid-template-columns:1fr 1fr;
+        grid-template-rows: mesonry;
+
+      }
+     
+    </style>
   </head>
   <body>
+    <div class="grid-container">
+     <img src="/image-gallery/img/mounten.jfif" alt="">
+     <!-- <img src="/image-gallery/img/pexels-muffin-creatives-2468773.jpg" alt=""> -->
+     <img src="/image-gallery/img/river.jfif" alt="">
+     <img src="/image-gallery/img/sunrise.jfif" alt="">
+     <img src="/image-gallery/img/sunset.jfif" alt="">
+     <img src="/image-gallery/img/tree.jfif" alt="">
+     <img src="/image-gallery/img/waterfoll.jpg" alt="">
+     <img src="/image-gallery/img/river.jfif" alt="">
+
+    </div>
+
     <script>
       "use strict";
       let a = 10;
