--- a/Java script/new.html
+++ b/Java script/new.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        img[alt='']{
+        img:has{
             border: 2px solid red;
         }
     
