--- a/Java script/new.html
+++ b/Java script/new.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        img:has{
+        img:not([alt]){
             border: 2px solid red;
         }
     
@@ -13,6 +13,6 @@
 </head>
 <body>
   <img src="/image-gallery/img/mounten.jfif" alt="" width="200" height="200">
-  <img src="/image-gallery/img/river.jfif" alt="river" width="200" height="200">
+  <img src="/image-gallery/img/river.jfif"  width="200" height="200">
 </body>
 </html>
