--- a/Java script/index.html
+++ b/Java script/index.html
@@ -94,6 +94,11 @@
       <a href="./array.html" class="btn">Array</a>
     </div>
     <hr>
+    <h2>JavaScript ToDo App (08-08-2024)</h2>
+    <div class="flex">
+      <a href="./to_do_app/index.html" class="btn">ToDo App</a>
+    </div>
+    <hr>
   </div>
 </body>
 </html>
