--- a/Java script/to_do_app/index.html
+++ b/Java script/to_do_app/index.html
@@ -1,47 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToDo App</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://kit.fontawesome.com/3f2c09a521.js" crossorigin="anonymous"></script>
-  </head>
-  <body class="d-flex flex-column gap-5">
-    <!-- header section -->
-    <header>
-      <div class="container-fluid p-3">
-        <div class="container p-4 text-light fw-bold">
-          <p class="text-uppercase text-center">todo app</p>
-        </div>
-      </div>
-    </header>
-    <!-- main section -->
-    <main>
-        <div class="container d-flex justify-content-between mb-5">
-           <input type="text" id="text" class="form-control p-3 border-3" placeholder="Enter your task">
-            <button class="btn btn-addTask text-light ms-3" id="addTask" onclick="saveTask()">add task</button>
-        </div>
-        <div class="task-list container">
-          
-            <!-- <i class="fa-regular fa-pen-to-square"></i>
-            <i class="fa-solid fa-trash-can"></i>     -->
-           
-        </div>
-    </main>
 
-    <script src="script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ToDo App</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/3f2c09a521.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+
+  <div class="container d-flex gap-5 flex-column-reverse flex-lg-row">
+    <div class="left-side d-flex flex-column gap-5">
+      <h2 class="text-uppercase mt-5 fs-1 text-center">Todo app</h2>
+      <div class="d-flex gap-4">
+        <input type="text" class="form-control p-2" id="text" placeholder="Enter your task" />
+        <button class="btn btn-success" onclick="saveTask()">Submit</button>
+      </div>
+      <ul class="list-unstyled task-list">
+      </ul>
+    </div>
+    <div class="right-side mt-5 text-center">
+      <img src="./image.png" alt="" class=""/>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
 </html>
 
