todo app complate

--- a/JavaScript/to_do_app/index.html
+++ b/JavaScript/to_do_app/index.html
@@ -18,7 +18,7 @@
   <h1 class="text-uppercase mt-3 fs-1 text-center">Todo app</h1>
 
   <div class="container d-flex gap-5 flex-column-reverse flex-md-row">
-    <div class="left-side d-flex flex-column gap-5">
+    <div class="left-side d-flex flex-column gap-3">
       <h2 class="text-uppercase mt-5 fs-1 text-center">Todo app</h2>
       <div >
         <form class="d-flex gap-4">
@@ -28,6 +28,7 @@
       </div>
       <ul class="list-unstyled task-list d-flex flex-column gap-2">
       </ul>
+      <button class="btn w-50 mx-auto" onclick="allDataDelete()">Delete All</button>
     </div>
     <div class="right-side mt-5 text-center">
       <img src="./image.png" alt="" class=""/>
