--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
      <hr>
      <h2>JavaScript All Work</h2>
      <div class="flex">
-     <a href="./Java script/index.html" class="btn">Js all work</a>
+     <a href="./JavaScript/index.html" class="btn">Js all work</a>
      </div>
      <hr>
     </div>
