--- a/JavaScript/api.html
+++ b/JavaScript/api.html
@@ -1,23 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API in js</title>
 </head>
+
 <body>
     <h2>API in Js</h2>
     <button onclick="back()">Back</button>
     <button onclick="next()">Next</button>
-
+    <button id="demo">demo</button>
+    &nbsp
+    <h1></h1>
     <script>
         //history API
-        function back(){
+        function back() {
             window.history.back();
         }
-        function next(){
+        function next() {
             window.history.go(-1);
         }
+        let btn=document.getElementById('demo');
+        fetch('https://jsonplaceholder.typicode.com/todos')
+            .then(response => response.json())
+            .then((json) => {
+               // console.log(json);
+                //document.write("<br><br>Id is:",json.id);
+                //document.write("<br><br>Title is:",json.title);
+                //document.write("<br><br>Completed is:",json.completed);
+              document.write(json.map((value)=>`<br>id:${value.id} titles:${value.title} `));
+            })
+
+           
+            navigator.geolocation.getCurrentPosition(function(position) {
+               // document.write('<br><br>latitude:',position.coords.latitude);
+                //document.write('<br><br>longitude',position.coords.longitude);
+              });
+              navigator.geolocation.watchPosition((success, error, options)=>console.log(success));
     </script>
 </body>
 </html>
+
