--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -99,6 +99,12 @@
       <a href="./to_do_app/index.html" class="btn">ToDo App</a>
     </div>
     <hr>
+    <h2>jQuery</h2>
+    <div class="flex">
+      <a href="./jQuery/effect.html" class="btn">jQuery Effect</a>
+      <a href="./jQuery/Traversing.html" class="btn">jQuery Traversing</a>
+    </div>
+    <hr>
   </div>
 </body>
 </html>
