--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -105,6 +105,12 @@
       <a href="./jQuery/Traversing.html" class="btn">jQuery Traversing</a>
     </div>
     <hr>
+    <h2>Task</h2>
+    <div class="flex">
+      <a href="./calculator/index.html" class="btn">Calculator task</a>
+      <a href="./palindrome.html" class="btn">Palindrome Checker task</a>
+    </div>
+    <hr>
   </div>
 </body>
 </html>
