--- a/JavaScript/palindrome.html
+++ b/JavaScript/palindrome.html
@@ -26,7 +26,7 @@
     <div class="container mx-auto border text-center p-5 mt-5 d-flex flex-column gap-4 shadow-lg">
         <h2>Palindrome Checker App</h2>
         <input type="text" id="input-number" class="form-control" placeholder="Enter text">
-        <p></p>
+        <p class=" alert alert-info m-0"></p>
         <button onclick="check()" class="btn w-100 btn-primary">Check</button>
     </div>
     <script>
