--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -109,6 +109,7 @@
     <div class="flex">
       <a href="./calculator/index.html" class="btn">Calculator task</a>
       <a href="./palindrome.html" class="btn">Palindrome Checker task</a>
+      <a href="./digitalClock/index.html" class="btn">Digital Clock task</a>
     </div>
     <hr>
   </div>
