tic tac toc game in js

--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -110,6 +110,7 @@
       <a href="./calculator/index.html" class="btn">Calculator task</a>
       <a href="./palindrome.html" class="btn">Palindrome Checker task</a>
       <a href="./digitalClock/index.html" class="btn">Digital Clock task</a>
+      <a href="./tic-tac-toc/index.html" class="btn">Tic Tac Toc game task</a>
     </div>
     <hr>
   </div>
