--- a/JavaScript/tic-tac-toc/index.html
+++ b/JavaScript/tic-tac-toc/index.html
@@ -3,20 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic tac toc</title>
-    <style>
-        .col{
-            width: 60px;
-            height: 60px;
-            border: 2px solid;
-        }
-        .row{
-            display: flex;
-        }
-    </style>
+    <title>Tic tac toc in js</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <h1>Tic Tac Toe</h1>
     <div class="container">
         <div class="row">
             <div class="col"></div>
@@ -34,6 +25,7 @@
             <div class="col"></div>
         </div>
     </div>
+    <button onclick="reset()">Reset</button>
     <script src="./script.js"></script>
 </body>
 </html>
