--- a/JavaScript/test/index.html
+++ b/JavaScript/test/index.html
@@ -42,6 +42,11 @@
                 li.remove();
             });
         }
+        Array.prototype.sum=(a,b)=>{
+            return a+b;
+        }
+        let arr=[];
+        console.log(arr.sum(10,20));
     </script>
 </body>
 </html>
