--- a/JavaScript/event_practice/form_validation.html
+++ b/JavaScript/event_practice/form_validation.html
@@ -4,45 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form validation in js</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+    <style>
+        .alert{
+            display: none;
+        }
+    </style>
 </head>
 <body>
-    <h2>Form validation</h2>
+    <div class="container p-5 bg-primary-subtle mt-4 w-75 rounded-4">
+    <h2 class="text-center">Registration Form</h2>
     <form action="">
-        <input type="text" id="username" placeholder="Enter username">
-        <p id="p"></p>
-        <input type="text" id="password1" placeholder="Enter password">
-        <p id="p2"></p>
-        <input type="text" id="password2" placeholder="Enter confirm password">
-        <p id="p3"></p>
-        <input type="text" id="password" placeholder="Enter email">
-        <p id="p4"></p>
-        <button type="submit">Submit</button>
+        <div id="error-msg" class="alert alert-danger"></div>
+
+        <label for="username" class="form-label fs-5 m-1">Username</label>
+        <input type="text" id="username" placeholder="Enter username" class="form-control m-1">
+
+        <label for="password1" class="form-label fs-5 m-1">Password</label>
+        <input type="text" id="password1" placeholder="Enter password" class="form-control m-1">
+
+        <label for="password2" class="form-label fs-5 m-1">Confirm Password</label>
+        <input type="text" id="password2" placeholder="Enter confirm password" class="form-control m-1">
+        
+        <label for="email" class="form-label fs-5 m-1">Email</label>
+        <input type="text" id="email" placeholder="Enter email" class="form-control m-1">
+    
+        <button type="submit" id="submit" class="btn btn-primary mt-3">Submit</button>
     </form>
-    <script>
-        let uname=document.getElementById("username");
-        let pwd1=document.getElementById("password1");
-        let pwd2=document.getElementById("password2");
-        let email=document.getElementById("email");
-
-       uname.addEventListener("input",(e)=>{
-            let p=document.getElementById("p");
-            if(uname.value.trim()==""){
-               p.textContent="enter username";
-            }else if(uname.value.includes(" ")){
-                p.textContent="Whitepace not allow";
-            }
-        });
-
-        email.addEventListener("input",(e)=>{
-            let p=document.getElementById("p4");
-            let regex=/[A-Za-z0-9\._%+\-]+@[A-Za-z0-9\.\-]+\.[A-Za-z]/i;
-            if(email.value.trim()==""){
-                p.textContent="enter username";
-             }else if(email.value.includes(" ")){
-                 p.textContent="Whitepace not allow";
-             }
-        })
-
-    </script>
+    </div>
+    <script src="./form_validation.js"></script>
 </body>
 </html>
+
