form validation in js

--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -111,6 +111,7 @@
       <a href="./palindrome.html" class="btn">Palindrome Checker task</a>
       <a href="./digitalClock/index.html" class="btn">Digital Clock task</a>
       <a href="./tic-tac-toc/index.html" class="btn">Tic Tac Toc game task</a>
+      <a href="./event_practice/form_validation.html" class="btn">Form validation task</a>
     </div>
     <hr>
   </div>
