--- a/JavaScript/event_practice/login.html
+++ b/JavaScript/event_practice/login.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <style>
-        .alert{
+        .alert {
             display: none;
         }
     </style>
 </head>
+
 <body>
     <div class="container p-5 bg-primary-subtle mt-4 w-75 rounded-4">
         <h2 class="text-center">Login Form</h2>
@@ -33,30 +35,43 @@
             let uname = document.getElementById("uname");
             let pwd = document.getElementById("pwd");
             let user = JSON.parse(localStorage.getItem("user"));
+            let msg = document.getElementById("error-msg");
             console.log(user);
             document.querySelector("form").addEventListener("submit", (e) => {
                 e.preventDefault();
                 let error = {};
-                if (user.uname == uname.value.trim() && user.pwd == pwd.value.trim()) {
-                    alert("Login successfully");
-                }
-                else {
-                    if (user.uname !== uname.value.trim()) {
-                        error.username = "Enter valid username";
-                    }
-                    if (user.pwd !== pwd.value.trim()) {
-                        error.password = "Enter valid password";
-                    }
+                let data;
+                user.map((e) => {
+                    if (e.uname == uname.value.trim() && e.pwd == pwd.value.trim()) {
+                        data = e;
+                        console.log(data)
+                    } else { data = {}; }
+                    return data;
+                });
 
-                    let msg = document.getElementById("error-msg");
+                if (uname.value.trim() == "" || pwd.value.trim() == "") {
+                    error.required = "Please enter all field";
                     msg.style.display = "block";
 
                     Object.values(error).forEach((e) => {
                         msg.innerHTML += e + "<br>";
                     });
                 }
+                else {
+                    if (Object.keys(data).length == 0) {
+                        error.validData = "Please enter valid data";
+                        msg.style.display = "block";
+
+                        Object.values(error).forEach((e) => {
+                            msg.innerHTML += e + "<br>";
+                        });
+                    }
+                    else {
+                        alert("Login successfully");
+                    }
+                }
             });
         </script>
 </body>
-</html>
 
+</html>
