form validation task completed in JS

--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -105,13 +105,13 @@
       <a href="./jQuery/Traversing.html" class="btn">jQuery Traversing</a>
     </div>
     <hr>
-    <h2>Task</h2>
+    <h2>Tasks</h2>
     <div class="flex">
       <a href="./calculator/index.html" class="btn">Calculator task</a>
       <a href="./palindrome.html" class="btn">Palindrome Checker task</a>
       <a href="./digitalClock/index.html" class="btn">Digital Clock task</a>
       <a href="./tic-tac-toc/index.html" class="btn">Tic Tac Toc game task</a>
-      <a href="./event_practice/form_validation.html" class="btn">Form validation task</a>
+      <a href="./event_practice/form-validation/index.html" class="btn">Form validation task</a>
     </div>
     <hr>
   </div>
