--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -112,6 +112,7 @@
       <a href="./digitalClock/index.html" class="btn">Digital Clock task</a>
       <a href="./tic-tac-toc/index.html" class="btn">Tic Tac Toc game task</a>
       <a href="./event_practice/form-validation/index.html" class="btn">Form validation task</a>
+      <a href="./drag-and-drop/index.html" class="btn">Drag and Drop Image task</a>
     </div>
     <hr>
   </div>
